@@ -45,7 +45,7 @@ if ($sanity_check > 0) {
         sql_query('UPDATE topics SET last_post = ' . sqlesc($arr['id']) . ', post_count = post_count - 1 WHERE id = ' . sqlesc($topic_id)) or sqlerr(__FILE__, __LINE__);
         sql_query('UPDATE forums SET post_count = post_count - 1 WHERE id = ' . sqlesc($arr['forum_id'])) or sqlerr(__FILE__, __LINE__);
         sql_query('DELETE FROM posts WHERE id = ' . sqlesc($post_id)) or sqlerr(__FILE__, __LINE__);
-        sql_query('UPDATE usersachiev SET forumposts=forumposts-1 WHERE id=' . sqlesc($arr_post['user_id'])) or sqlerr(__FILE__, __LINE__);
+        sql_query('UPDATE usersachiev SET forumposts = forumposts - 1 WHERE userid = ' . sqlesc($arr_post['user_id'])) or sqlerr(__FILE__, __LINE__);
         clr_forums_cache($arr['forum_id']);
         clr_forums_cache($post_id);
     } else {
